// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpressionInputs /> tests getItemRenderer tests works irrespective of case 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-active bp4-disabled bp4-selected menuDropdown"
      role="menuitem"
      tabindex="-1"
      title="app.name"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        <span
          class="menuItem"
        >
          <span
            class="group1"
          >
            app.
          </span>
          <mark>
            name
          </mark>
        </span>
      </div>
    </a>
  </li>
</div>
`;

exports[`<ExpressionInputs /> tests getItemRenderer tests works irrespective of case 2`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-active bp4-disabled bp4-selected menuDropdown"
      role="menuitem"
      tabindex="-1"
      title="app.Name"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        <span
          class="menuItem"
        >
          <span
            class="group1"
          >
            app.
          </span>
          <mark>
            Name
          </mark>
        </span>
      </div>
    </a>
  </li>
</div>
`;

exports[`<ExpressionInputs /> tests getItemRenderer tests works irrespective of case 3`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-active bp4-disabled bp4-selected menuDropdown"
      role="menuitem"
      tabindex="-1"
      title="app.xyz.name"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        <span
          class="menuItem"
        >
          <span
            class="group1"
          >
            app.
          </span>
          <mark>
            xyz
          </mark>
          <span
            class="group2"
          >
            <bdi>
              .name
            </bdi>
          </span>
        </span>
      </div>
    </a>
  </li>
</div>
`;
